@@ -1,7 +1,7 @@
 {
   "name": "Modular Storage",
   "description": "A flexible storage solution",
-  "parent": "rftoolsstorage:category_rftoolsstorage",
+  "parent": "rftoolsbase:category_rftoolsstorage",
   "icon": "rftoolsstorage:modular_storage",
   "sortnum": 10
 }
