@@ -1,7 +1,7 @@
 {
   "name": "Storage Scanner",
   "description": "Powerful block that can access nearby inventories from a centralized place",
-  "parent": "rftoolsstorage:category_rftoolsstorage",
+  "parent": "rftoolsbase:category_rftoolsstorage",
   "icon": "rftoolsstorage:storage_scanner",
   "sortnum": 20
 }
